force-app/main/default/objects/ApprovalMetricStretch__mdt/ApprovalMetricStretch__mdt.object-meta.xml
<CustomObject>
    <label>Tramo de Métrica de Aprobación</label>
    <pluralLabel>Tramos de Métrica de Aprobación</pluralLabel>
</CustomObject>