force-app/main/default/objects/ApprovalMetricStretch__mdt/fields/ApprovalMetric__c.field-meta.xml
<CustomField>
    <fullName>ApprovalMetric__c</fullName>
    <label>Métrica de Aprobación</label>
    <referenceTo>ApprovalMetric__mdt</referenceTo>
    <relationshipLabel>Tramos</relationshipLabel>
    <relationshipName>Stretches</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>