force-app/main/default/objects/ApprovalMetricStretch__mdt/fields/ApprovalRoleName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRoleName__c</fullName>
    <description>Approver&apos;s UserRole API Name.</description>
    <inlineHelpText>Nombre API de la función del usuario aprobador</inlineHelpText>
    <label>Función del Aprobador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>