force-app/main/default/objects/ApprovalMetricStretch__mdt/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Aprobador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
                <default>true</default>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Función específica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>