force-app/main/default/objects/ApprovalMetricStretch__mdt/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <label>Valor Máximo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>