force-app/main/default/objects/ApprovalMetricStretch__mdt/fields/MinValue__c.field-meta.xml
<CustomField>
    <fullName>MinValue__c</fullName>
    <label>Valor Mínimo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>