force-app/main/default/objects/ApprovalMetricStretch__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ApprovalMetric__c</columns>
    <columns>MinValue__c</columns>
    <columns>MaxValue__c</columns>
    <columns>Approver__c</columns>
    <columns>ApprovalRoleName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>en_US</language>
</ListView>